// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemAction renders with href 1`] = `
<Button
  className="__ListItemAction__"
  ghost={false}
  href="//example.com"
  loading={false}
  prefixCls="ant-btn"
  target="_blank"
>
  <IconText
    text="Test"
    type="info"
  />
</Button>
`;

exports[`ListItemAction renders with onClick 1`] = `
<Button
  className="__ListItemAction__"
  ghost={false}
  loading={false}
  onClick={[Function]}
  prefixCls="ant-btn"
>
  <IconText
    text="Test"
    type="info"
  />
</Button>
`;
